@@ -44,6 +44,9 @@ public class CryptographicKey extends UniquelyIdentifiedAndAudited implements Se
     @Column(name = "owner")
     private String owner;
 
+    @Column(name = "owner_uuid")
+    private UUID ownerUuid;
+
     @ManyToOne(fetch = FetchType.LAZY)
     @JoinColumn(name = "group_uuid", insertable = false, updatable = false)
     private Group group;
@@ -133,6 +136,14 @@ public class CryptographicKey extends UniquelyIdentifiedAndAudited implements Se
         this.owner = owner;
     }
 
+    public UUID getOwnerUuid() {
+        return ownerUuid;
+    }
+
+    public void setOwnerUuid(UUID ownerUuid) {
+        this.ownerUuid = ownerUuid;
+    }
+
     public Group getGroup() {
         return group;
     }
@@ -189,6 +200,7 @@ public class CryptographicKey extends UniquelyIdentifiedAndAudited implements Se
         dto.setTokenInstanceUuid(tokenInstanceReferenceUuid.toString());
         if(group != null ) dto.setGroup(group.mapToDto());
         dto.setOwner(owner);
+        if (ownerUuid != null) dto.setOwnerUuid(ownerUuid.toString());
         dto.setItems(getKeyItemsSummary());
         dto.setAssociations((items.size() -1 ) + certificates.size());
         return dto;
@@ -208,6 +220,8 @@ public class CryptographicKey extends UniquelyIdentifiedAndAudited implements Se
         dto.setTokenInstanceUuid(tokenInstanceReferenceUuid.toString());
         dto.setItems(getKeyItems());
         dto.setOwner(owner);
+        if (ownerUuid != null) dto.setOwnerUuid(ownerUuid.toString());
+
         dto.setAttributes(AttributeDefinitionUtils.getResponseAttributes(
                 AttributeDefinitionUtils.deserialize(attributes, DataAttribute.class)
         ));
@@ -221,7 +235,7 @@ public class CryptographicKey extends UniquelyIdentifiedAndAudited implements Se
                 keyAssociationDto.setUuid(e.getUuid().toString());
                 keyAssociationDto.setResource(Resource.CERTIFICATE);
                 return keyAssociationDto;
-            }).collect(Collectors.toList()));
+            }).toList());
         }
         return dto;
     }
