@@ -20,6 +20,9 @@ import com.czertainly.api.model.connector.cryptography.key.KeyPairDataResponseDt
 import com.czertainly.api.model.core.audit.ObjectType;
 import com.czertainly.api.model.core.audit.OperationType;
 import com.czertainly.api.model.core.auth.Resource;
+import com.czertainly.api.model.core.auth.UserDetailDto;
+import com.czertainly.api.model.core.certificate.CertificateEvent;
+import com.czertainly.api.model.core.certificate.CertificateEventStatus;
 import com.czertainly.api.model.core.cryptography.key.*;
 import com.czertainly.api.model.core.cryptography.tokenprofile.TokenProfileDetailDto;
 import com.czertainly.api.model.core.search.SearchFieldDataByGroupDto;
@@ -32,15 +35,13 @@ import com.czertainly.core.dao.repository.*;
 import com.czertainly.core.enums.SearchFieldNameEnum;
 import com.czertainly.core.model.SearchFieldObject;
 import com.czertainly.core.model.auth.ResourceAction;
+import com.czertainly.core.security.authn.client.UserManagementApiClient;
 import com.czertainly.core.security.authz.ExternalAuthorization;
 import com.czertainly.core.security.authz.SecuredParentUUID;
 import com.czertainly.core.security.authz.SecuredUUID;
 import com.czertainly.core.security.authz.SecurityFilter;
 import com.czertainly.core.service.*;
-import com.czertainly.core.util.AttributeDefinitionUtils;
-import com.czertainly.core.util.CertificateUtil;
-import com.czertainly.core.util.RequestValidatorHelper;
-import com.czertainly.core.util.SearchHelper;
+import com.czertainly.core.util.*;
 import com.czertainly.core.util.converter.Sql2PredicateConverter;
 import jakarta.persistence.EntityManager;
 import jakarta.persistence.PersistenceContext;
@@ -80,8 +81,6 @@ public class CryptographicKeyServiceImpl implements CryptographicKeyService {
         return result.stream().toList();
     }
 
-    @PersistenceContext
-    private EntityManager entityManager;
     // --------------------------------------------------------------------------------
     // Services & API Clients
     // --------------------------------------------------------------------------------
@@ -92,6 +91,8 @@ public class CryptographicKeyServiceImpl implements CryptographicKeyService {
     private CryptographicKeyEventHistoryService keyEventHistoryService;
     private PermissionEvaluator permissionEvaluator;
     private CertificateService certificateService;
+    @Autowired
+    private UserManagementApiClient userManagementApiClient;
     // --------------------------------------------------------------------------------
     // Repositories
     // --------------------------------------------------------------------------------
@@ -100,8 +101,6 @@ public class CryptographicKeyServiceImpl implements CryptographicKeyService {
     private TokenProfileRepository tokenProfileRepository;
     private TokenInstanceReferenceRepository tokenInstanceReferenceRepository;
     private GroupRepository groupRepository;
-    @Autowired
-    private AttributeContentRepository attributeContentRepository;
 
     @Autowired
     public void setAttributeService(AttributeService attributeService) {
@@ -179,15 +178,8 @@ public class CryptographicKeyServiceImpl implements CryptographicKeyService {
         filter.setParentRefProperty("tokenInstanceReferenceUuid");
         RequestValidatorHelper.revalidateSearchRequestDto(request);
 
-        final List<UUID> objectUUIDs = new ArrayList<>();
-        if (!request.getFilters().isEmpty()) {
-            final List<SearchFieldObject> searchFieldObjects = new ArrayList<>();
-            searchFieldObjects.addAll(getSearchFieldObjectForMetadata());
-            searchFieldObjects.addAll(getSearchFieldObjectForCustomAttributes());
-
-            final Sql2PredicateConverter.CriteriaQueryDataObject criteriaQueryDataObject = Sql2PredicateConverter.prepareQueryToSearchIntoAttributes(searchFieldObjects, request.getFilters(), entityManager.getCriteriaBuilder(), Resource.CRYPTOGRAPHIC_KEY);
-            objectUUIDs.addAll(cryptographicKeyRepository.findUsingSecurityFilterByCustomCriteriaQuery(filter, criteriaQueryDataObject.getRoot(), criteriaQueryDataObject.getCriteriaQuery(), criteriaQueryDataObject.getPredicate()));
-        }
+        // filter keys based on attribute filters
+        final List<UUID> objectUUIDs = attributeService.getResourceObjectUuidsByFilters(Resource.CRYPTOGRAPHIC_KEY, filter, request.getFilters());
 
         final Pageable p = PageRequest.of(request.getPageNumber() - 1, request.getItemsPerPage());
         final List<KeyItemDto> listedKeyDtos = cryptographicKeyItemRepository.findUsingSecurityFilter(filter, (root, cb) -> Sql2PredicateConverter.mapSearchFilter2Predicates(request.getFilters(), cb, root, objectUUIDs), p, (root, cb) -> cb.desc(root.get("cryptographicKey").get("created")))
@@ -386,7 +378,7 @@ public class CryptographicKeyServiceImpl implements CryptographicKeyService {
         CryptographicKey key = getCryptographicKeyEntity(uuid);
         if (request.getName() != null && !request.getName().isEmpty()) key.setName(request.getName());
         if (request.getDescription() != null) key.setDescription(request.getDescription());
-        if (request.getOwner() != null) key.setOwner(request.getOwner());
+        if (request.getOwnerUuid() != null) updateOwner(key, request.getOwnerUuid());
         if (request.getGroupUuid() != null) key.setGroupUuid(UUID.fromString(request.getGroupUuid()));
         if (request.getTokenProfileUuid() != null) {
             TokenProfile tokenProfile = tokenProfileRepository.findByUuid(
@@ -409,6 +401,15 @@ public class CryptographicKeyServiceImpl implements CryptographicKeyService {
         cryptographicKeyRepository.save(key);
         logger.debug("Key details updated. Key: {}", key);
         return getKey(tokenInstanceUuid, uuid.toString());
+    }
+
+    private void updateOwner(CryptographicKey key, String ownerUuid) {
+        // if there is no change, do not update and save request to Auth service
+        if (key.getOwnerUuid() != null && key.getOwnerUuid().toString().equals(ownerUuid)) return;
+        UserDetailDto userDetail = userManagementApiClient.getUserDetail(ownerUuid);
+        key.setOwner(userDetail.getUsername());
+        key.setOwnerUuid(UUID.fromString(userDetail.getUuid()));
+        cryptographicKeyRepository.save(key);
     }
 
     @Override
@@ -874,7 +875,6 @@ public class CryptographicKeyServiceImpl implements CryptographicKeyService {
         key.setTokenProfile(tokenProfile);
         key.setTokenInstanceReference(tokenInstanceReference);
         key.setAttributes(AttributeDefinitionUtils.serialize(attributes));
-        key.setOwner(request.getOwner());
         if (request.getGroupUuid() != null) key.setGroupUuid(UUID.fromString(request.getGroupUuid()));
         logger.debug("Cryptographic Key: {}", key);
         cryptographicKeyRepository.save(key);
@@ -1050,6 +1050,13 @@ public class CryptographicKeyServiceImpl implements CryptographicKeyService {
                 false
         ));
         key.setItems(children);
+        try {
+            NameAndUuidDto userIdentification = AuthHelper.getUserIdentification();
+            key.setOwner(userIdentification.getName());
+            key.setOwnerUuid(UUID.fromString(userIdentification.getUuid()));
+        } catch (Exception e) {
+            logger.warn("Unable to set owner of new key to logged user: {}", e.getMessage());
+        }
         cryptographicKeyRepository.save(key);
         return key;
     }
@@ -1079,6 +1086,13 @@ public class CryptographicKeyServiceImpl implements CryptographicKeyService {
                         )
                 )
         );
+        try {
+            NameAndUuidDto userIdentification = AuthHelper.getUserIdentification();
+            key.setOwner(userIdentification.getName());
+            key.setOwnerUuid(UUID.fromString(userIdentification.getUuid()));
+        } catch (Exception e) {
+            logger.warn("Unable to set owner of new key to logged user: {}", e.getMessage());
+        }
         cryptographicKeyRepository.save(key);
         return key;
     }
@@ -1290,46 +1304,27 @@ public class CryptographicKeyServiceImpl implements CryptographicKeyService {
     }
 
     private List<SearchFieldDataByGroupDto> getSearchableFieldsMap() {
-
-        final List<SearchFieldDataByGroupDto> searchFieldDataByGroupDtos = new ArrayList<>();
-
-        final List<SearchFieldObject> metadataSearchFieldObject = getSearchFieldObjectForMetadata();
-        if (metadataSearchFieldObject.size() > 0) {
-            searchFieldDataByGroupDtos.add(new SearchFieldDataByGroupDto(SearchHelper.prepareSearchForJSON(metadataSearchFieldObject), SearchGroup.META));
-        }
-
-        final List<SearchFieldObject> customAttrSearchFieldObject = getSearchFieldObjectForCustomAttributes();
-        if (customAttrSearchFieldObject.size() > 0) {
-            searchFieldDataByGroupDtos.add(new SearchFieldDataByGroupDto(SearchHelper.prepareSearchForJSON(customAttrSearchFieldObject), SearchGroup.CUSTOM));
-        }
+        final List<SearchFieldDataByGroupDto> searchFieldDataByGroupDtos = attributeService.getResourceSearchableFieldInformation(Resource.CRYPTOGRAPHIC_KEY);
 
         List<SearchFieldDataDto> fields = List.of(
                 SearchHelper.prepareSearch(SearchFieldNameEnum.NAME),
-                SearchHelper.prepareSearch(SearchFieldNameEnum.CK_GROUP, groupRepository.findAll().stream().map(Group::getName).collect(Collectors.toList())),
+                SearchHelper.prepareSearch(SearchFieldNameEnum.CK_GROUP, groupRepository.findAll().stream().map(Group::getName).toList()),
                 SearchHelper.prepareSearch(SearchFieldNameEnum.CK_OWNER),
-                SearchHelper.prepareSearch(SearchFieldNameEnum.CK_KEY_USAGE, Arrays.stream((KeyUsage.values())).map(KeyUsage::getCode).collect(Collectors.toList())),
+                SearchHelper.prepareSearch(SearchFieldNameEnum.CK_KEY_USAGE, Arrays.stream((KeyUsage.values())).map(KeyUsage::getCode).toList()),
                 SearchHelper.prepareSearch(SearchFieldNameEnum.KEY_LENGTH),
-                SearchHelper.prepareSearch(SearchFieldNameEnum.KEY_STATE, Arrays.stream((KeyState.values())).map(KeyState::getCode).collect(Collectors.toList())),
-                SearchHelper.prepareSearch(SearchFieldNameEnum.KEY_FORMAT, Arrays.stream((KeyFormat.values())).map(KeyFormat::getCode).collect(Collectors.toList())),
-                SearchHelper.prepareSearch(SearchFieldNameEnum.KEY_TYPE, Arrays.stream((KeyType.values())).map(KeyType::getCode).collect(Collectors.toList())),
-                SearchHelper.prepareSearch(SearchFieldNameEnum.KEY_CRYPTOGRAPHIC_ALGORITHM, Arrays.stream((KeyAlgorithm.values())).map(KeyAlgorithm::getCode).collect(Collectors.toList())),
-                SearchHelper.prepareSearch(SearchFieldNameEnum.KEY_TOKEN_PROFILE, tokenProfileRepository.findAll().stream().map(TokenProfile::getName).collect(Collectors.toList())),
-                SearchHelper.prepareSearch(SearchFieldNameEnum.KEY_TOKEN_INSTANCE_LABEL, tokenInstanceReferenceRepository.findAll().stream().map(TokenInstanceReference::getName).collect(Collectors.toList()))
+                SearchHelper.prepareSearch(SearchFieldNameEnum.KEY_STATE, Arrays.stream((KeyState.values())).map(KeyState::getCode).toList()),
+                SearchHelper.prepareSearch(SearchFieldNameEnum.KEY_FORMAT, Arrays.stream((KeyFormat.values())).map(KeyFormat::getCode).toList()),
+                SearchHelper.prepareSearch(SearchFieldNameEnum.KEY_TYPE, Arrays.stream((KeyType.values())).map(KeyType::getCode).toList()),
+                SearchHelper.prepareSearch(SearchFieldNameEnum.KEY_CRYPTOGRAPHIC_ALGORITHM, Arrays.stream((KeyAlgorithm.values())).map(KeyAlgorithm::getCode).toList()),
+                SearchHelper.prepareSearch(SearchFieldNameEnum.KEY_TOKEN_PROFILE, tokenProfileRepository.findAll().stream().map(TokenProfile::getName).toList()),
+                SearchHelper.prepareSearch(SearchFieldNameEnum.KEY_TOKEN_INSTANCE_LABEL, tokenInstanceReferenceRepository.findAll().stream().map(TokenInstanceReference::getName).toList())
         );
-        fields = fields.stream().collect(Collectors.toList());
+        fields = new ArrayList<>(fields);
         fields.sort(new SearchFieldDataComparator());
         searchFieldDataByGroupDtos.add(new SearchFieldDataByGroupDto(fields, SearchGroup.PROPERTY));
 
         logger.debug("Searchable CryptographicKey Fields groups: {}", searchFieldDataByGroupDtos);
         return searchFieldDataByGroupDtos;
-    }
-
-    private List<SearchFieldObject> getSearchFieldObjectForMetadata() {
-        return attributeContentRepository.findDistinctAttributeContentNamesByAttrTypeAndObjType(Resource.CRYPTOGRAPHIC_KEY, AttributeType.META);
-    }
-
-    private List<SearchFieldObject> getSearchFieldObjectForCustomAttributes() {
-        return attributeContentRepository.findDistinctAttributeContentNamesByAttrTypeAndObjType(Resource.CRYPTOGRAPHIC_KEY, AttributeType.CUSTOM);
     }
 
 }
